2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/glassplayer/dev_mme.cpp' that broke the build
	under Linux.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Modified glassplayer(1) to use 'MME' as the default audio device
	under Windows.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--mme-device-id=' switch for glassplayer(1).
	* Implemented the Stats interface for the MME driver.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warnings in 'src/common/audiodevice.cpp'.
	* Cleaned up warnings in 'src/common/cmdswitch.cpp'.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/common/cmdswitch.cpp' and
	'src/glassplayer/dev_mme.cpp' that broke the build under Linux.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Refactored temporary file creation code in
	'src/glassplayer/serverid.cpp' to work correctly under Windows.
2016-12-20 Fred Gleason <fredg@paravelsystems.com>
	* Refactored the Windows MME driver so as not to deadlock when
	playing File Server sources.
2017-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/dev_alsa.cpp' that caused a hang
	at startup for File Server sources shorter than 2*samplerate frames.
	* Added a workaround for a bug in ALSA that causes garbage to be
	appended to the final PCM block written.
2017-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--pregap=' option to glassplayer(1).
2017-09-04 Fred Gleason <fredg@paravelsystems.com>
	* Documented the '--pregap=' option in the glasscoder(1) man page.
	* Fixed a typo in the entry for the --stats-out' option in the
	glasscoder(1) man page.
2017-09-08 Fred Gleason <fredg@paravelsystems.com>
	* Added an internal tone generator.
2017-09-08 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.7.0.
2017-09-08 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/glassplayer/conn_siggen.cpp' to avoid use of the
	'exp10()' function.